--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,7 @@
   <br />
   <br />
 
-  <stepperv2 [stepList]="stepList"></stepperv2>
+  <!-- <stepperv2 [stepList]="stepList"></stepperv2> -->
+
+  <stepperv3></stepperv3>
 </div>
